# MessiahFX-Prod

./: .containerignore  .dockerignore  .env.example  .gitignore  Makefile  Prompt.txt  README.md  conftest.py  docker-compose.coolify.yml  podman-compose.dev.yml  podman-compose.yml  pytest.ini
docs/: backups.md  capital-allocation.md  capital-controls.md  dev-hot-reload.md  go-live-checklist.md  incident-runbook.md  observability.md  ohlcv-persistence.md  paper-validation.md  parameter-governance.md  rag.md  roadmap.md  scale.md  security.md  terminal.md  vol-sizing.md
migrations/: alembic.ini  env.py
scripts/: backup-postgres.sh  backup-redis.sh  dev-up.ps1  restore-postgres.sh  (+1 more)
shared/: pyproject.toml
shared/mezna_shared/: __init__.py  allocation.py  audit.py  bars.py  credential_store.py  db.py  encryption.py  kelly.py  logging_config.py  metrics.py  metrics_gauges.py  observability.py  ohlcv.py  opportunities.py  order_ids.py  order_state.py  param_governance.py  pnl.py  reconciliation.py  redis_client.py  regime_map.py  session.py  venues.py  volatility.py
shared/mezna_shared/models/: __init__.py  audit.py  base.py  ohlcv_bar.py  opportunity.py  position.py  risk_event.py  strategy_config.py  trade.py
shared/mezna_shared/schemas/: __init__.py  opportunity.py  risk.py  trade.py
shared/tests/: conftest.py  test_allocation.py  test_bars.py  test_metrics_gauges.py  test_ohlcv.py  test_opportunities.py  test_order_ids.py  test_order_state.py  test_param_governance.py  test_pnl.py  test_reconciliation.py  test_session.py  test_venues.py  test_volatility.py
(+262 files in other folders)
