[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mezna-shared"
version = "0.1.0"
description = "MeznaQuantFX AI — shared library (models, schemas, DB, Redis, logging)"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "structlog>=24.0",
    "cryptography>=42.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mezna_shared*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
